# weather-data-processing

./: README.md
weather-service/: .env.sample  Dockerfile  README.md  main.py  pyproject.toml
weather-service/tests/: test_server.py
weather-service/weather_service/: dash_app.py  dash_app_alerts.py  dash_app_statistics.py  dash_app_threshold.py  db_models.py  db_utils.py  main.py  utils.py
