[tool.poetry]
name = "weather-service"
version = "0.1.0"
description = ""
authors = ["Ayush Anand <36472216+ayushanand18@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
